--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "constantinople": ">=3.1.1"
   }
 }
